# realtime0052

./: .gitignore  AGENTS.md  CHANGELOG.md  FUGLE_MCP_GUIDE.md  GIT_GITHUB_GUIDE.md  PROJECT_CONTEXT.md  PROMPT_TEMPLATES.md  README.md  advice.py  app.py  cli.py  config_loader.py  data_sources.py  di.py  indicators.py  market_data_types.py  market_history.duckdb  pyproject.toml  requirements.txt  state_keys.py
.githooks/: pre-commit
.github/workflows/: ci.yml
backtest/: __init__.py  adjustments.py  comparison.py  engine.py  metrics.py  portfolio.py  rotation.py  start_point.py  strategy_library.py  types.py  walkforward.py
conf/: config.yaml  tw_etf_management_fees.json  tw_etf_management_fees_missing.csv
conf/features/: default.yaml
conf/storage/: duckdb.yaml  sqlite.yaml
conf/sync/: default.yaml
conf/ui/: default.yaml
docs/: ai-etf-briefing-agent-runbook.md  duckdb_housekeeping.md  plan-architecture-tooling-docs.md  plan-performance-special.md  tw-etf-report-bundle.md
docs/cli/: README.md  backtest.md  bootstrap.md  chart-backtest.md  export-etf-briefing.md  export-tw-etf-report.md  export-tw-etf-super-table.md  info.md  serve.md  sync-tw-etf-constituents.md  sync-twse-etf-daily.md  sync-twse-etf-mis.md  sync.md
providers/: __init__.py  base.py  tw_finmind.py  tw_fugle_rest.py  tw_fugle_ws.py  tw_mis.py  tw_openapi.py  tw_tpex.py  us_stooq.py  us_twelve.py  us_yahoo.py
scripts/: auto_changelog.py  backfill_daily_vwap.py  backup_duckdb_snapshot.py  bootstrap_market_data.py  bootstrap_project_docs.py  duckdb_housekeeping.py  enable_new_stack.sh  manage_tw_etf_fees.py  migrate_sqlite_to_duckdb.py  restore_duckdb_snapshot.py  rollback_legacy_stack.sh  run_fugle_mcp_server.sh  setup_git_hooks.sh
services/: __init__.py  backtest_cache.py  backtest_runner.py  benchmark_loader.py  bootstrap_loader.py  chart_export.py  etf_briefing.py  heatmap_runner.py  market_data_service.py  provider_gateway.py  provider_policies.py  rotation_runner.py  sync_orchestrator.py  tw_etf_constituent_sync.py  tw_etf_daily_sync.py  tw_etf_margin_sync.py  tw_etf_mis_sync.py  tw_etf_report.py  tw_etf_report_logging.py  tw_etf_super_export.py
storage/: __init__.py  duck_store.py  history_store.py
tests/: test_active_etf_page.py  test_advice.py  test_backtest_cache.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_page.py  test_backtest_replay_payload.py  test_backtest_runner.py  test_benchmark_loader.py  test_bootstrap_loader.py  test_chart_export.py  test_cli.py  test_comparison.py  test_config_loader.py  test_data_sources.py  test_di.py  test_duck_store.py  test_etf_briefing.py  test_heatmap_runner.py  test_history_store.py  test_lightweight_adapter.py  test_market_data_service.py  test_portfolio_walkforward.py  test_rotation_backtest.py  test_rotation_runner.py  test_split_adjustments.py  test_start_point.py  test_state_keys.py  test_sync_orchestrator.py  test_total_return_adjustment.py  test_tw_etf_constituent_sync.py  test_tw_etf_daily_sync.py  test_tw_etf_margin_sync.py  test_tw_etf_mis_sync.py  test_tw_etf_report.py  test_tw_etf_super_export.py  test_tw_finmind_provider.py  test_tw_providers.py  test_ui_core_charts.py  test_us_twelve_provider.py  (+1 more)
ui/: __init__.py  constants.py  loaders.py
ui/charts/: __init__.py  lightweight_adapter.py
ui/core/: __init__.py  charts.py  health.py  page_registry.py
ui/helpers/: __init__.py  symbol_utils.py  url_utils.py
utils/: __init__.py
(+44 files in other folders)
