[project]
name = "realtime-0052"
version = "0.1.0"
description = "0052 即時走勢＋指標整合（Streamlit）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit==1.42.0",
  "streamlit-lightweight-charts==0.7.20",
  "plotly==5.24.1",
  "pandas==2.2.3",
  "numpy==2.0.2",
  "requests==2.32.3",
  "websocket-client==1.8.0",
  "yfinance==0.2.54",
  "duckdb>=1.1.3,<2",
  "pyarrow>=17,<20",
  "hydra-core>=1.3.2,<2",
  "omegaconf>=2.3.0,<3",
  "urllib3<2",
  "watchdog>=6.0.0",
]

[dependency-groups]
dev = []
