[project]
name = "realtime-0052"
version = "0.1.0"
description = "0052 即時走勢＋指標整合（Streamlit）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.50",
  "streamlit-lightweight-charts>=0.7.20",
  "plotly>=5.24.1",
  "pandas>=2.2.3",
  "numpy>=2.1",
  "requests>=2.32.3",
  "websocket-client>=1.8.0",
  "yfinance>=0.2.54",
  "duckdb>=1.1.3,<2",
  "pyarrow>=15.0.0",
  "hydra-core>=1.3.2,<2",
  "omegaconf>=2.3.0,<3",
  "urllib3<2",
  "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0",
  "ruff>=0.9",
  "mypy>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
