[project]
name = "realtime-0052"
version = "0.1.0"
description = "0052 即時走勢＋指標整合（Streamlit）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "streamlit>=1.50",
  "streamlit-lightweight-charts>=0.7.20",
  "plotly>=5.24.1",
  "pandas>=2.2.3",
  "numpy>=2.1",
  "requests>=2.32.3",
  "websocket-client>=1.8.0",
  "yfinance>=0.2.54",
  "duckdb>=1.1.3,<2",
  "pyarrow>=15.0.0",
  "hydra-core>=1.3.2,<2",
  "omegaconf>=2.3.0,<3",
  "urllib3<2",
  "watchdog>=6.0.0",
]

[project.scripts]
realtime0052 = "cli:main"

[dependency-groups]
dev = [
  "pytest>=7.0",
  "ruff>=0.9",
  "mypy>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line too long
    "F811",  # redefinition of unused (quote param conflicts with urllib.parse.quote)
    "C408",  # unnecessary dict() call
    "C414",  # unnecessary list() call
    "C416",  # unnecessary dict comprehension
    "B026",  # star-arg unpacking after keyword argument
    "E402",  # module level import not at top (some files have conditional imports)
    "E741",  # ambiguous variable name (l for lambda line)
    "N816",  # mixedCase variable in global scope
    "SIM105", # use contextlib.suppress instead of try-except-pass
    "SIM108", # use ternary operator instead of if-else
    "SIM102", # use single if statement instead of nested
    "SIM103", # return the negated condition directly
    "SIM113", # use enumerate() for index variable
    "SIM117", # use single with statement with multiple contexts
    "F401",  # unused imports (conditional imports for optional features)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["utils", "ui/helpers", "ui/shared", "ui/loaders.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
